@@ -44,6 +44,7 @@ class Config extends \Magento\Payment\Gateway\Config\Config
     public const INVOICE_EMAIL           = 'invoice_email';
     public const ORDER_EMAIL             = 'order_email';
     public const INITIAL_ORDER_STATUS    = 'ngenius_initial_order_status';
+    public const REFUND_STATUS           = 'refund_statuses';
     /**
      * @var \NetworkInternational\NGenius\Model\CoreFactory
      */
@@ -403,7 +404,7 @@ class Config extends \Magento\Payment\Gateway\Config\Config
      *
      * @param int|null $storeId
      *
-     * @return string|null
+     * @return bool|null
      */
     public function getInvoiceSend(int $storeId = null): ?bool
     {
@@ -415,10 +416,22 @@ class Config extends \Magento\Payment\Gateway\Config\Config
      *
      * @param int|null $storeId
      *
-     * @return string|null
+     * @return bool|null
      */
     public function getEmailSend(int $storeId = null): ?bool
     {
         return $this->getValue(Config::ORDER_EMAIL, $storeId);
+    }
+
+    /**
+     * Gets N-Genius Refund Status
+     *
+     * @param int|null $storeId
+     *
+     * @return bool|null
+     */
+    public function getIsNgeniusRefundStatus(int $storeId = null): ?bool
+    {
+        return $this->getValue(Config::REFUND_STATUS, $storeId);
     }
 }
