@@ -2,6 +2,11 @@
 Date                Version     Description
 =========================================================================
 
+2023-08-15: v1.1.0 : Fix order status not changing to 'Complete' when shipped using 'Capture Offline'.
+                     Fix cron query timing out.
+                     Allow N-Genius Refund Statuses to be configurable.
+                     Add merchant defined data for plugin name and version.
+
 2023-08-05: v1.0.9 : Add option "Send Email on Order Creation".
                      Force Magento payment action to 'authorize'.
                      Fix order email not sending for COD payment method.
